business solution content spacing fix

--- a/src/partials/components/_businessSolutions.scss
+++ b/src/partials/components/_businessSolutions.scss
@@ -23,7 +23,7 @@
                 }
             }
             h4{
-                margin: 0;
+                margin: 1rem 0;
             }
             p{
                 color: $whiteFont;
@@ -31,7 +31,18 @@
                 margin: 0;
                 font-size: 2rem;
             }
-
+            .businessText{
+                height: 90%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+            }
+            .topContent{
+                height: 60%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+            }
             .bottomInfo .stats{
                 // border: 2px solid blue;
                 display: flex;
